Fix mobile header, contrast problem in background

--- a/src/_includes/partials/page-header/_page-header.css
+++ b/src/_includes/partials/page-header/_page-header.css
@@ -4,13 +4,14 @@
 }
 
 .page-header {
+  background: black;
   width: 100%;
   max-width: var(--outer-width);
   position: relative;
   margin: 0 auto;
 
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr 40px;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: max-content;
   grid-template-areas:
     "logo        navigation"
